kubernetes/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: krishibandhu
  labels:
    name: krishibandhu
    environment: production
