kubernetes/02-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-deployment
  namespace: krishibandhu
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: adarsh5559/krishibandhu-backend:7
          imagePullPolicy: Always

          ports:
            - containerPort: 5000

          resources:
            requests:
              memory: "128Mi"
              cpu: "10m"
            limits:
              memory: "512Mi"
              cpu: "500m"
