kubernetes/03-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment
  namespace: krishibandhu
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: adarsh5559/krishibandhu-frontend:8
          imagePullPolicy: Always 
          
          ports:
            - containerPort: 8080

          resources:
            requests:
              memory: "128Mi"
              cpu: "10m"
            limits:
              memory: "512Mi"
              cpu: "500m"
