kubernetes/06-backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  namespace: krishbandhu
  labels:
    app: frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30080
