kubernetes/07-frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  namespace: krishbandhu
  labels:
    app: frontend
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
